kube_develop/kube_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: kwet-ingress
  namespace: kwetter-development
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-development"    
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: kwet.development.kwetter.nl
    http:
      paths:
      - backend:
          serviceName: notificationservice
          servicePort: 80
  tls:
  - hosts:
    - kwet.development.kwetter.nl
    secretName: 
status:
  loadBalancer:
    ingress:
     - ip:
